<resources>
    // strings
    <string name="app_name">Example</string>
    <string name="main_menu_statistics">статистика</string>
    <string name="main_menu_completed">завершенные</string>
    <string name="main_menu_main">главная</string>
    <string name="main_menu_saved">сохраненные</string>
    <string name="main_menu_settings">настройки</string>
    <string name="theme_progress">%1$d%%</string>
    <string name="time_to_complete">≈ %1$d мин </string>
    <string name="theme_description_back_button">вернуться</string>
    <string name="icon_for_words_count">icons for words count</string>
    <string name="icon_for_english_level">icons for difficult level</string>
    <string name="icon_for_time_to_complete">icons for time to complete</string>
    <string name="icon_for_progress">icons for progress</string>
    <string name="start_theme_button">начать</string>
    <string name="question_mark">\?</string>
    <string name="say_example_icon">say example icon</string>
    <string name="add_to_favorite_icon">add to favorite icon</string>
    <string name="difficult">сложность</string>
    <string name="very_easy">легче простого</string>
    <string name="easy">легко</string>
    <string name="middle">средне</string>
    <string name="hard">сложно</string>
    <string name="very_hard">I\'m from London</string>
    <string name="got_it">got it</string>
    <string name="completed_themes">Завершенные темы</string>
    <string name="saved_examples">сохраненные примеры</string>
    <string name="icon_in_shape_of_heart">icon in shape of heart</string>
    <string name="settings">настройки</string>
    <string name="color_for_word">цвет выделения слов</string>
    <string name="show_splash_screen">показывать стартовый экран</string>
    <string name="start_english_level">начальный уровень сложности</string>
    <string name="text_explanations_when_changes_will_happen">(изменения вступят в силу после перезапуска приложения)</string>
    <string name="beginner">beginner</string>
    <string name="elementary">elementary</string>
    <string name="intermediate">intermediate</string>
    <string name="upper_intermediate">upper-intermediate</string>
    <string name="advanced">advanced</string>
    <string name="tap_in_any_place">нажмите в любом месте для продолжения</string>
    <string name="no_show_more">больше не показывать</string>
    <string name="examples_completed">примеров пройдено</string>
    <string name="error_when_calculate_message">похоже при вычислении процента пройденных примеров что то пошло не так</string>
    <string name="sound_not_supported_message">К сожалению, голосовое воспроизведение недоступно на данном устройстве.</string>
    <string name="explanation_5">Наслаждайтесь тем, как улучшается твой английский от простого повторения</string>
    <string name="explanation_4">Сохраняйте понравившиеся примеры</string>
    <string name="explanation_3">Выберите уровень сложности и повторите предложение еще раз</string>
    <string name="explanation_2">Просто повторите предложение</string>
    <string name="explanation_1">Выберите категорию по описанию</string>

    // plurals
    <plurals name="example_count_plurals_template">
        <item quantity="one">%1$d пример</item>
        <item quantity="two">%1$d примера</item>
        <item quantity="few">%1$d примера</item>
        <item quantity="many">%1$d примеров</item>
        <item quantity="other"> %1$d примеров</item>
    </plurals>
</resources>